adicionando comentário no notebook

--- a/EDA-sazonalidade-adw.ipynb
+++ b/EDA-sazonalidade-adw.ipynb
@@ -3791,16 +3791,13 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Supondo que você já tenha o DataFrame 'vendas_final' disponível\n",
-    "# Se não tiver carregado, você pode adaptar conforme necessário\n",
-    "\n",
     "# Converta a coluna 'dt_pedido' para o formato de data\n",
     "vendas_final['dt_pedido'] = pd.to_datetime(vendas_final['dt_pedido'], errors='coerce')\n",
     "\n",
     "# Verifique o tipo de dados da coluna 'dt_pedido' após a conversão\n",
     "print(vendas_final['dt_pedido'].dtype)\n",
     "\n",
-    "# Agora, tente criar a coluna 'month_year' novamente\n",
+    "# Criação da coluna 'month_year' \n",
     "vendas_final['month_year'] = vendas_final['dt_pedido'].dt.to_period('M')\n",
     "\n",
     "# Separando dados por canal\n",
@@ -4359,7 +4356,14 @@
     "\n",
     "# Substituindo 'test' pelo nome do Dataframe\n",
     "resultado = seasonal_decompose(grouped_test.set_index('dt_pedido')['qt_encomendada_produto'], model='additive', period=12)\n",
-    "seasonal_decomposition_plots(data=grouped_test, seasonal_decomposition=resultado)\n"
+    "seasonal_decomposition_plots(data=grouped_test, seasonal_decomposition=resultado)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Podemos observar sazonalidade no produto 'Mountain-200 Black, 38' através do gráfico Seasonal. Temos um padão de repetição com picos para os meses 3, 6, 9 e 12."
    ]
   }
  ],
